Add necessary opens so Forgedev works on Java 17
This just copies the same changes made to userdev