@@ -229,6 +229,12 @@ project(':forge') {
                 main 'net.minecraftforge.userdev.LaunchTesting'
                 workingDirectory project.file('run')
 
+                // Support Forge devs running on Java 8 and up, including 16
+                jvmArgs '-XX:+IgnoreUnrecognizedVMOptions'
+                jvmArgs '--add-exports=java.base/sun.security.util=ALL-UNNAMED'
+                jvmArgs '--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming'
+                jvmArgs '--add-opens=java.base/java.util.jar=ALL-UNNAMED'
+
                 environment 'target', 'fmldevclient'
                 environment 'assetIndex', '{asset_index}'
                 environment 'assetDirectory', downloadAssets.output
@@ -273,6 +279,12 @@ project(':forge') {
                 main 'net.minecraftforge.userdev.LaunchTesting'
                 workingDirectory project.file('run')
 
+                // Support Forge devs running on Java 8 and up, including 16
+                jvmArgs '-XX:+IgnoreUnrecognizedVMOptions'
+                jvmArgs '--add-exports=java.base/sun.security.util=ALL-UNNAMED'
+                jvmArgs '--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming'
+                jvmArgs '--add-opens=java.base/java.util.jar=ALL-UNNAMED'
+
                 environment 'target', 'fmldevserver'
 
                 environment 'MC_VERSION', MC_VERSION
@@ -309,6 +321,12 @@ project(':forge') {
 
                 main 'net.minecraftforge.userdev.LaunchTesting'
                 workingDirectory project.file('run')
+
+                // Support Forge devs running on Java 8 and up, including 16
+                jvmArgs '-XX:+IgnoreUnrecognizedVMOptions'
+                jvmArgs '--add-exports=java.base/sun.security.util=ALL-UNNAMED'
+                jvmArgs '--add-exports=jdk.naming.dns/com.sun.jndi.dns=java.naming'
+                jvmArgs '--add-opens=java.base/java.util.jar=ALL-UNNAMED'
 
                 environment 'target', 'fmldevdata'
                 environment 'assetIndex', '{asset_index}'
